[package]
name = "onelineout"
version = "0.1.0"
edition = "2024"
description = "Print piped input lines and update the terminal line using carriage return (\\r)."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fepfitra/onelineout"
homepage = "https://github.com/fepfitra/onelineout"
documentation = "https://docs.rs/onelineout"
keywords = ["stdout", "pipe", "terminal", "oneline", "carriage-return"]
categories = ["command-line-utilities"]
authors = ["fepfitra <fitra.fep@gmail.com>"]

[dependencies]
